<resources>
    <string name="app_name">Study_Buddy</string>
    <string name="home">Home</string>
    <string name="edit">Edit</string>
    <string name="setting">setting</string>
    <string name="app_controls">app controls</string>
    <string name="something_cool">Something Cool</string>
    <string name="communicate">communicate</string>
    <string name="our_email">our email</string>
</resources>