<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_screen_1"
            android:title="@string/edit" />
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/setting">
            <menu>
                <item
                    android:id="@+id/nav_app_controls"
                    android:title="@string/app_controls" />
                <item
                    android:id="@+id/nav_something_cool"
                    android:title="@string/something_cool" />
            </menu>
        </item>
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/contact"
                android:title="@string/our_email" />
        </menu>
    </item>

</menu>